cluster-cd/apps/base/kopia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name kopia
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: metrics
      port: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
