cluster-cd/apps/base/kopia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: heimdall
    app.kubernetes.io/name: &name heimdall
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host dash.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: heimdall
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: heimdall-tls
